Fixed top hotspot's z-index

--- a/rsc/style.css
+++ b/rsc/style.css
@@ -2,7 +2,7 @@
 
 body{background-size:cover !important;margin:0;cursor:url(../img/Cursors/pointer.png),auto;font-family:Segoe UI;-moz-user-select:none;-webkit-user-select:none}body img{-webkit-user-drag:none}a:-webkit-any-link{text-decoration:none;cursor:inherit}
 
-.tophotspot{position:fixed;top:0;left:0;width:100%;height:1px;z-index:2}.tophotspot:hover + #header, #header:hover{visibility:visible}body > header{position:fixed;width:100% !important;height:60px;box-shadow:0 0 15px 1px #000;z-index:3}body > header:hover{box-shadow:0px 0px 25px 5px #000}
+.tophotspot{position:fixed;top:0;left:0;width:100%;height:1px;z-index:3}.tophotspot:hover + #header, #header:hover{visibility:visible}body > header{position:fixed;width:100% !important;height:60px;box-shadow:0 0 15px 1px #000;z-index:3}body > header:hover{box-shadow:0px 0px 25px 5px #000}
 
 .powerbar{height:60px;border-bottom:1px solid #454545;-webkit-padding-start:0;-webkit-margin-after:0;-webkit-margin-before:0;cursor:url(../img/Cursors/grab.png),auto}.topbar-current{width:172px;height:60px;float:left}.topbar-current:hover{background:rgba(51, 51, 51, 0.5)}.navlocal{position:absolute;top:16px;margin-left:65px;font-family:segoe ui;font-weight:bold;font-size:18px}.icon{width:45px;height:45px;position:absolute;top:7px;left:10px}.togglemenu{display:inline-block;width:calc(100% + -121px);height:60px;float:left}
 
